# service_lib

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: kafka_agent.md
service_lib/: base_system.py  logging.py  settings.py  state.py  state_manager.py  types.py  worker.py
service_lib/components/: base.py  http_session.py  kafka_producer.py  mongo.py  postgres.py  redis.py
service_lib/fastapi/: __init__.py  defaults.py
service_lib/fastapi/middlewares/: __init__.py  logging.py
service_lib/kafka_agent/: __init__.py  agent.py  errors.py  metrics_store.py  partition_consumer.py  rebalance_listener.py  retry_policy.py  retryable_exceptions.py  subscription.py  types.py
service_lib/utils/: asyncio.py  functional.py  infrastructure.py
tests/: conftest.py  test_worker.py
tests/kafka_agent/: docker-compose.yaml  shared.py  test_e2e.py  test_partition_consumer.py
